add /pong
